[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/turtle/turtle.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/assets/joust_indicator_point.png" type="Texture" id=3]
[ext_resource path="res://player/assets/joust_indicator_bottom.png" type="Texture" id=4]
[ext_resource path="res://player/assets/joust_indicator_bottom_mod.png" type="Texture" id=5]
[ext_resource path="res://player/assets/joust_indicator_point_mod.png" type="Texture" id=6]
[ext_resource path="res://player/knight/knight.tscn" type="PackedScene" id=8]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[node name="Player" groups=[
"player",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
locked = false
locked_speed = 0.0
slowed = false

[node name="CollisionPolygon2D" parent="." index="1"]
disabled = false

[node name="CollisionPolygon2D" parent="Hitbox" index="0"]
disabled = false

[node name="AnimationTree" parent="." index="4"]
parameters/playback = SubResource( 1 )
parameters/idle/playback = SubResource( 2 )

[node name="Knight" parent="." index="5" instance=ExtResource( 8 )]
position = Vector2( 1.38696, -28.2939 )

[node name="JoustIndicatorBase" type="Sprite" parent="." index="6"]
visible = false
position = Vector2( 150, 0 )
rotation = 1.5708
scale = Vector2( 0.075, 0.05 )
texture = ExtResource( 4 )

[node name="Modulate" type="Sprite" parent="JoustIndicatorBase" index="0"]
texture = ExtResource( 5 )

[node name="JoustIndicatorPoint" type="Sprite" parent="." index="7"]
visible = false
position = Vector2( 167.646, 0 )
rotation = 1.5708
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 3 )

[node name="Modulate" type="Sprite" parent="JoustIndicatorPoint" index="0"]
texture = ExtResource( 6 )
